[package]
name = "prime-time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
log = "0.4.17"
primes = "0.3.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
utils = { path = "../utils" }
